# poc-llm-chat-and-assistant

./: .env-example  .gitignore  README.md  main.py  pyproject.toml  test_generator.py
one_script_assistants/: aws_bedrock.py
src/: app.py  config.py
src/code_upgrader/: docstrings_generator.py  pytest_generator.py  python_parser.py
src/static/: style.css
src/templates/: index.html
